[gd_scene load_steps=10 format=3 uid="uid://dx3d77jkmchxb"]

[ext_resource type="Script" path="res://race.gd" id="1_uc4a8"]
[ext_resource type="PackedScene" uid="uid://b4gx2ur8wy5c2" path="res://Player/Player.tscn" id="1_ueti2"]
[ext_resource type="PackedScene" uid="uid://bdpu8bt16cyol" path="res://road.tscn" id="2_o7aw2"]
[ext_resource type="PackedScene" uid="uid://df60ak4o67hn6" path="res://Road_income.tscn" id="3_uvqcs"]
[ext_resource type="PackedScene" uid="uid://cbcoqbc8f2ors" path="res://enemy_car.tscn" id="4_mt2wv"]
[ext_resource type="Texture2D" uid="uid://ev2jw2peboat" path="res://Mini Pixel Pack 2/UI/Player_arrow_indicator (8 x 8).png" id="7_ht2je"]
[ext_resource type="Script" path="res://Life.gd" id="7_rxnv0"]
[ext_resource type="Script" path="res://Speed.gd" id="8_7c3oa"]
[ext_resource type="AudioStream" uid="uid://qa88wygecstu" path="res://crash.mp3" id="9_ta165"]

[node name="Race" type="Node2D"]
position = Vector2(53, -31)
script = ExtResource("1_uc4a8")

[node name="Road" parent="." instance=ExtResource("2_o7aw2")]

[node name="Road_incoming" parent="." instance=ExtResource("3_uvqcs")]

[node name="PLayer" parent="." instance=ExtResource("1_ueti2")]
position = Vector2(569, 680)

[node name="Enemy_car" parent="." instance=ExtResource("4_mt2wv")]
position = Vector2(571, -49)

[node name="Life" type="Label" parent="."]
offset_left = -29.0
offset_top = 31.0
offset_right = 12.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 66
text = "3"
script = ExtResource("7_rxnv0")

[node name="heart" type="Sprite2D" parent="."]
position = Vector2(33, 83)
scale = Vector2(4.75, 7)
texture = ExtResource("7_ht2je")

[node name="Speed" type="Label" parent="."]
offset_left = -21.0
offset_top = 647.0
offset_right = 208.0
offset_bottom = 730.0
theme_override_colors/font_color = Color(1, 0.321569, 0.368627, 1)
theme_override_colors/font_shadow_color = Color(0.560784, 0.960784, 0, 1)
theme_override_font_sizes/font_size = 60
text = "10 km/h"
script = ExtResource("8_7c3oa")

[node name="crash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ta165")

[node name="increased" type="Label" parent="."]
visible = false
offset_left = -13.0
offset_top = 615.0
offset_right = 219.0
offset_bottom = 655.0
theme_override_colors/font_color = Color(1, 0.321569, 0.368627, 1)
theme_override_colors/font_shadow_color = Color(1, 0.784314, 0, 1)
theme_override_font_sizes/font_size = 22
text = "SPEED INCREASED +1"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="speed_increased" from="." to="Enemy_car" method="_on_race_speed_increased"]
[connection signal="area_entered" from="PLayer" to="." method="_on_p_layer_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Road"]
[editable path="Road_incoming"]
